--- a/src/android/twiliovideo.gradle
+++ b/src/android/twiliovideo.gradle
@@ -2,10 +2,9 @@ repositories {
     jcenter()
 }
 
-
 dependencies {
-    compile 'com.twilio:video-android:2.0.0-preview6'
-    compile 'com.koushikdutta.ion:ion:2.1.7'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
+    implementation 'com.twilio:video-android:3.0.0'
+    implementation 'com.koushikdutta.ion:ion:2.1.7'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
 }
