--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": [],
   "dependencies": {
     "decompress": "4.2.0",
-    "decompress-tarbz2": "4.1.1"
+    "decompress-unzip": "4.0.1"
   },
   "scripts": {
     "postinstall": "node hooks/node_before_add/fetch-twilio-video-ios.js"
