--- a/src/android/docwayvideo.gradle
+++ b/src/android/docwayvideo.gradle
@@ -7,4 +7,5 @@ dependencies {
     implementation 'com.koushikdutta.ion:ion:2.1.7'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
+	implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
